@@ -1,3 +1,8 @@
+2013-10-09  Roland McGrath  <mcgrathr@google.com>
+
+	* elfxx-tilegx.c (tilegx32_plt_tail_entry, tilegx32_plt_tail_entry):
+	Move second const qualifier so it applies to the pointer.
+
 2013-10-09  Nick Clifton  <nickc@redhat.com>
 
 	PR binutils/16022
